2007-01-04  Sanel <karijes@users.sourceforge.net>

	* Finished jam -sSHARED=1 option, so shared library
	be built.
	* Small work on File class.
	* Generator for README (usefull?)

2007-01-03  Sanel <karijes@users.sourceforge.net>

	* More work on File class.

2007-01-01  The Carcass  <sanel@darkstar>

	* test/run.sh - now files are run from this
	directory explicit, so we don't call system wide
	command with the same name

2006-12-29  Sanel <karijes@users.sourceforge.net>

	* Added checks if doxygen exists

2006-12-25  Sanel <karijes@users.sourceforge.net>

	* Finished Config class. Probably needs more polishing,
	but that is comming later.

2006-12-24  Sanel <karijes@users.sourceforge.net>

	* Finished str_trimright, and added test for it
	* Now documentation can be built not only from doc
	directory
	* Added run.sh, script which should run tests.

2006-12-23  Sanel <karijes@users.sourceforge.net>

	* Basic structure, jam builds, doxygen documentatio
	and not yet finished Config class
	* Added StringUtils(.h,.cpp) with c string functions
	* Added tests for StringUtils